<resources>
    <string name="app_name">人人推</string>
    <string name="can_receive_task">可接任务</string>
    <string name="action_settings">Settings</string>
    <string name="nogoing_1">已通过(0)</string>
    <string name="nogoing">已领取(0)</string>
    <string name="ongoing">审核中(0)</string>
    <string name="finished">未通过(0)</string>
    <string name="through">审核通过</string>
    <string name="invalid">过期失效</string>
    <string name="through_1">进行中(0)</string>
    <string name="invalid_1">已过期(0)</string>
    <string name="cancelled">已取消</string>
    <string name="networknotconnect">网络无连接</string>
    <string name="serviceErr">网络错误！</string>
    <string name="serviceExp">网络异常！</string>
    <string name="refresh">刷新</string>
    <string name="taskcontent">任务详情</string>
    <string name="personalcenter">个人中心</string>
    <string name="contractSubmission">提交审核</string>
    <string name="setting">设置</string>
    <string name="systemSetting">系统设置</string>
    <string name="myTask">我的任务</string>
    <string name="aboutme">关于我们</string>
    <string name="helpCenter">帮助中心</string>
    <string name="helpShare">招募合伙人</string>
    <string name="helpkf">在线客服</string>
    <string name="personaldata">个人资料</string>
    <string name="versionUpdate">当前版本</string>
    <string name="cache">清除缓存</string>
    <string name="withdrawals">提现</string>
    <string name="trueWithdrawals">确认提现</string>
    <string name="canWithdrawals">可提现</string>
    <string name="canWithdrawalsMoney">可提现金额</string>
    <string name="audit">审核中</string>
    <string name="myMoney">我的余额</string>
    <string name="withdrawalsing">提现中</string>
    <string name="tips">友情提示</string>
    <string name="tips_content">1.为确保转账成功，请保证您的支付宝账户信息真实、有效；\n2.申请提现后，我们将会以最快的速度转账，请您耐心等待！</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="alipay_account_type">提现账户</string>
    <string name="alipay_name">支付宝姓名</string>
    <string name="balance">提现金额</string>
    <string name="updatePassword">修改密码</string>
    <string name="signOut">退出登录</string>
    <string name="password">密码</string>
    <string name="oldPassword">旧密码</string>
    <string name="newPassword">新密码</string>
    <string name="againPassword">确认密码</string>
    <string name="referee">请输入推荐人手机号(非必填)</string>
    <string name="login">登录</string>
    <string name="more">更多</string>
    <string name="register">注册</string>
    <string name="userIcon">头像</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="birthday">出生日期</string>
    <string name="phone">手机</string>
    <string name="phoneNum">手机号码</string>
    <string name="code">短信验证码</string>
    <string name="writeCode">输入验证码</string>
    <string name="confirm">确认</string>
    <string name="matters_need_attention">注意事项</string>
    <string name="task_description">任务流程</string>
    <string name="company_profile">公司介绍</string>
    <string name="receive_task">领取任务</string>
    <string name="finished_task">已完成任务</string>
    <string name="giveup_task">放弃任务</string>
    <string name="submit_data">提交审核</string>
    <string name="save">保存</string>
    <string name="camera">拍照</string>
    <string name="album">从相册中选择</string>
    <string name="give_up">取消</string>
    <string name="download_title" formatted="false">发现最新版本(%s)</string>
    <string name="progressbar_dialog_txt">正在处理，请稍后...</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="task_detail_examine_format" formatted="false">审核: %1$s天</string>
    <string name="task_detail_dealtime_format" formatted="false">截止日期: %1$s</string>
    <string name="task_detail_forecasttime_format" formatted="false">预计用时: %1$s 分钟</string>
    <string name="task_detail_tel_format" formatted="false"><![CDATA[<font color="#00bcd5"> %1$s</font>]]></string>
    <string name="get_image_by_camera_or_pic_error">请稍后重试...</string>
    <string name="add_order_img_type_error">选择文件类型错误,请选择jpg格式</string>
    <string name="add_order_img_upload_reset">点击重新上传</string>
    <string name="upload_task_status_waiting">等待上传</string>
    <string name="upload_task_status_uploading">正在上传</string>
    <string name="upload_task_status_complete">已经上传</string>
    <string name="upload_task_status_fail">上传失败</string>
    <string name="upload_task_status_stop">已停止上传</string>
    <string name="my_task_list_itemt_1" formatted="false">审核中(%1$s)</string>
    <string name="my_task_list_itemt_2" formatted="false">已通过(%1$s)</string>
    <string name="my_task_list_itemt_3" formatted="false">未通过(%1$s)</string>
    <string name="my_task_list_itemt_4" formatted="false">成功分享%1$s次</string>
    <string name="my_task_list_itemt_5" formatted="false">任务进行中</string>
    <string name="my_task_list_itemt_6" formatted="false">任务已过期</string>
    <string name="personal_item_task_datumn_tv">资料审核详情</string>
    <string name="personal_item_task_message_tv">消息中心</string>
    <string name="personal_item_task_money_tv">资金明细</string>
    <string name="personal_item_task_friend_tv">我的合伙人</string>
    <string name="message_title_content">消息中心</string>
    <string name="my_tasknew_qianyue_flag" formatted="false">提交资料 %1$s 条</string>
    <string name="my_tasknew_friend_flag" formatted="false">任务参与人(%1$s)</string>
    <string name="title_activity_test">testActivity</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="sobot_app_name">智齿sdk</string>
    <string name="sobot_hello_world">Hello world!</string>
    <string name="sobot_action_settings">Settings</string>
    <string name="sobot_restart_talk">开始新会话</string>
    <string name="sobot_button_send">发送</string>
    <string name="sobot_attach_smile">表情</string>
    <string name="sobot_attach_picture">图片</string>
    <string name="sobot_attach_take_pic">拍照</string>
    <string name="sobot_attach_location">位置</string>
    <string name="sobot_attach_file">文件</string>
    <string name="sobot_attach_voice_call">语音电话</string>
    <string name="sobot_please">SOBOT SDK  1.3.2</string>
    <string name="sobot_value"></string>
    <string name="sobot_user_card">名片</string>
    <string name="sobot_move_up_to_cancel">手指上滑，取消发送</string>
    <string name="sobot_release_to_cancel">松开手指，取消发送</string>
    <string name="sobot_send_fail">发送消息失败,</string>
    <string name="sobot_delete_message">删除消息</string>
    <string name="sobot_copy_message">复制消息</string>
    <string name="sobot_delete_voice">删除语音</string>
    <string name="sobot_delete_video">删除视频</string>
    <string name="sobot_delete">删除</string>
    <string name="sobot_end">结束本次对话?</string>
    <string name="sobot_upload">上传图片</string>
    <string name="sobot_resend">点击重新发送</string>
    <string name="sobot_confirm_resend">确认重发该信息？</string>
    <string name="sobot_connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="sobot_network_unavailable">当前网络不可用，请检查您的网络设置</string>
    <string name="sobot_init_loading_wrong">加载错误</string>
    <string name="sobot_copy">复制</string>
    <string name="sobot_forward">转发</string>
    <string name="sobot_button_logout">退出登录</string>
    <string name="sobot_button_uploadlog">上传运行日志</string>
    <string name="sobot_ok">确定</string>
    <string name="sobot_cancel">取消</string>
    <string name="sobot_prompt">提示</string>
    <string name="sobot_clear_records">清空记录</string>
    <string name="sobot_clear_all_records">是否清空所有聊天记录？</string>
    <string name="sobot_location_recv">[%1$s的位置]</string>
    <string name="sobot_location_message">位置信息</string>
    <string name="sobot_recording_video">录制视频</string>
    <string name="sobot_location_prefix">[我的位置]</string>
    <string name="sobot_voice">[语音]</string>
    <string name="sobot_picture">[图片]</string>
    <string name="sobot_video">[视频]</string>
    <string name="sobot_file">[文件]</string>
    <string name="sobot_voice_call">[语音通话]</string>
    <string name="sobot_button_cancel">取消</string>
    <string name="sobot_button_save">保存</string>
    <string name="sobot_button_search">查找</string>
    <string name="sobot_button_add">添加</string>
    <string name="sobot_search_header">搜</string>
    <string name="sobot_network_isnot_available">网络不可用</string>
    <string name="sobot_recoding_fail">录音失败，请重试！</string>
    <string name="sobot_select_contacts">选择联系人</string>
    <string name="sobot_confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="sobot_logout">退出登录</string>
    <string name="sobot_logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="sobot_exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="sobot_dissolution_group_hint">退出后，此群将被解散</string>
    <string name="sobot_exit_group">退出</string>
    <string name="sobot_connect_conflict">同一帐号已在其他设备登录</string>
    <string name="sobot_em_user_remove">此用户已被移除</string>
    <string name="sobot_welcome">loading\.\.\.</string>
    <string name="sobot_robot">机械人乐乐</string>
    <string name="sobot_submit">提交</string>
    <string name="sobot_question">是否解决了您的问题？</string>
    <string name="sobot_questionone">是否有以下情况？</string>
    <string name="sobot_edittext_hint">欢迎给我们的服务提建议</string>
    <string name="sobot_chat_content">聊天内容</string>
    <string name="sobot_voiceTooShort">语音时长不能少于一秒钟</string>
    <string name="sobot_voiceTooLong">录音时间过长</string>
    <string name="sobot_dcrc">评价客服</string>
    <string name="sobot_questiontwo">请监督客服是否有以下问题</string>
    <string name="sobot_nomore">已无更多</string>
    <string name="sobot_rengongservice">人工服务</string>
    <string name="sobot_xlistview_header_hint_normal">查看更多历史纪录</string>
    <string name="sobot_xlistview_header_hint_ready">松开刷新数据</string>
    <string name="sobot_xlistview_header_hint_loading">正在加载</string>
    <string name="sobot_xlistview_header_last_time">上次查看时间：</string>
    <string name="sobot_xlistview_footer_hint_normal">查看更多</string>
    <string name="sobot_xlistview_footer_hint_ready">松开载入更多</string>
    <string name="sobot_outline_managerOutLine">有事离开</string>
    <string name="sobot_outline_leverByManager"> 结束了本次会话 </string>
    <string name="sobot_outline_JoinBlacklistByManager"> 结束了本次会话</string>
    <string name="sobot_outline_LongTimeNoSay">由于您长时间未说话，会话已结束</string>
    <string name="sobot_outline_openNewWindows">打开新窗口</string>
    <string name="sobot_current_network">当前网络不可用,请检查网络设置</string>
    <string name="sobot_reunicon">点击重新连接</string>
    <string name="sobot_read_all">阅读全文>></string>
    <string name="sobot_resendmsg">重新发送消息？</string>
    <string name="sobot_colse">关闭</string>
    <string name="add_shop">加入购物车</string>
    <string name="now_buy">立即购买</string>
    <string name="title_activity_my_friend">MyFriendActivity</string>
    <string name="title_activity_share_content_edit">ShareContentEditActivity</string>
</resources>