<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_view_bg"
    android:orientation="vertical" >

  <include
      layout="@layout/main_title_home_layout"
      ></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:background="#ffffff" >

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="13dp"
            android:text="@string/myMoney"
            android:textColor="#bbbbbb"
            android:textSize="@dimen/_12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="17dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_icon_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="￥"
                android:textColor="#f7585d"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/tv_can_withdrawals_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textColor="#f7585d"
                android:textSize="37sp" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="13dp"
        android:background="#e5e5e5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:text="已提现"
            android:textColor="#333333"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:text="￥"
            android:textColor="#333333"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_accumulated_wealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00"
            android:textColor="#333333"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        style="@style/line_height_10"
        ></View>
    <!-- 提现账户-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/_100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:text="@string/alipay_account_type"
            android:textColor="#333333"
            android:textSize="@dimen/_15dp"
            android:gravity="left|center_vertical"
            />
        <TextView
            android:id="@+id/tv_account_type"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_marginLeft="@dimen/_05dp"
            android:text="支付宝"
            android:textColor="@color/tv_order_color_5"
            android:textSize="@dimen/_15dp"
            android:layout_marginRight="@dimen/_05dp"
            android:background="@drawable/bg_shape_square"
            android:gravity="left|center_vertical"
            android:layout_gravity="left|center_vertical"

            />
        <TextView
            android:id="@+id/tv_account_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="13dp"
            android:textColor="#333333"
            android:text="绑定"
            android:layout_marginLeft="@dimen/_5dp"
            android:textSize="15sp"
            android:gravity="left|center_vertical"
            />
    </LinearLayout>

    <View
        style="@style/line_height_10"
        ></View>
<!--提现金额-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/_100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:text="@string/balance"
            android:textColor="#333333"
            android:gravity="left|center_vertical"
            android:textSize="@dimen/_15dp" />

        <EditText
            android:id="@+id/et_money"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="13dp"
            android:background="@null"
            android:hint="请输入提现金额，最低金额10元"
            android:inputType="numberDecimal"
            android:textColor="#333333"
            android:textColorHint="#888888"
            android:textSize="15sp"
            android:gravity="left|center_vertical"
            />
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15dp"
        android:layout_marginRight="@dimen/_15dp"
        android:layout_marginTop="@dimen/_25dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12dp"
            android:text="@string/tips"
            android:textColor="#888888"
            android:textSize="@dimen/_12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="12dp"
            android:text="@string/tips_content"
            android:textColor="#888888"
            android:textSize="@dimen/_12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_withdrawals"
        android:layout_width="335dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/_30dp"
        android:background="@drawable/btn_blue_wane_bg"
        android:paddingBottom="@dimen/_8dp"
        android:paddingTop="@dimen/_8dp"
        android:text="@string/trueWithdrawals"
        android:textColor="@android:color/white" />

</LinearLayout>