<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <!-- title-->
   <include
       layout="@layout/main_title_home_layout"
       ></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                style="@style/input_style"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingRight="12dp" >

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@drawable/icon_phone"
                    android:drawablePadding="@dimen/_12dp"
                    android:hint="手机号码"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textColorHint="#bbc0c7"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_get_code"
                    android:layout_width="@dimen/btn_width_code"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_get_code_bg"
                    android:text="获取验证码"
                    android:textColor="#00bcd5"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:padding="@dimen/_5dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dfdfdf" />

            <EditText
                android:id="@+id/et_code"
                style="@style/input_style_for_register"
                android:drawableLeft="@drawable/icon_verification_code"
                android:drawablePadding="@dimen/_12dp"
                android:hint="@string/writeCode"
                android:inputType="number"
                android:maxLength="6" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dfdfdf" />

            <LinearLayout
                style="@style/input_style"
                android:orientation="horizontal"
                android:paddingRight="12dp" >
                <EditText
                    android:hint="@string/password"
                    android:password="true"
                    android:maxLength="12"
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@drawable/icon_unlock"
                    android:drawablePadding="@dimen/_12dp"
                    android:singleLine="true"
                    android:textColorHint="#bbc0c7"
                    android:textSize="15sp"

                    />
                <ToggleButton
                    android:id="@+id/tb_swithc_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/bg_switch_pass"
                    android:checked="false"
                    android:textColor="@color/white"
                    android:textOff=""
                    android:textOn=""
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:background="@color/white"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:visibility="gone"
                android:background="#dfdfdf" />

            <EditText
                android:id="@+id/et_password2"
                style="@style/input_style_for_register"
                android:drawableLeft="@drawable/icon_unlock"
                android:drawablePadding="@dimen/_12dp"
                android:hint="@string/againPassword"
                android:password="true"
                android:visibility="gone"
                android:maxLength="12" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#dfdfdf" />
            <EditText
                android:id="@+id/et_phone_referee"
                style="@style/input_style_for_register"
                android:drawableLeft="@drawable/icon_phone"
                android:drawablePadding="@dimen/_12dp"
                android:hint="@string/referee"
                android:inputType="phone"
                android:maxLength="12" />
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="@dimen/_12dp"
                android:layout_marginTop="@dimen/_30dp"
                android:background="@drawable/btn_blue_wane_bg"
                android:text="@string/confirm"
                android:textColor="#ffffff"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>